--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 {% block styling %}
+<!-- Custom CSS -->
     <style>
         body{
-            background: url('/static/Landing.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
-            background-repeat: no-repeat;
-            background-size:cover;
+            background: url('/static/Landing.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%); /* Set background image and gradient */
+            background-repeat: no-repeat; /* Disable background image repetition */
+            background-size:cover; /* Adjust background size to cover the entire element */
             }
     </style>
 {% endblock %}
 
 
 {% block content %}
+<!-- Content section -->
 
 <div class="col-12 welcomeBlurb">
     <div class=" welcomeTitle"><h1>Welcome to CSGGHUB!!</h1></div> 
